Spacing fix for event tab

--- a/styles/style.css
+++ b/styles/style.css
@@ -192,11 +192,11 @@ screen and (pointer: coarse) and (min-device-width: 601px) {
     #event_tab {
         position: absolute;
         transform: rotate(-90deg);
-        height: 15px;
-        width: 130px;
+        height: 16px;
+        width: 135px;
         text-align: center;
-        top: 173px;
-        right: -84px;
+        top: 175px;
+        right: -86px;
         background-color: #313248;
         padding: 5px;
         cursor: pointer;
@@ -228,7 +228,7 @@ screen and (pointer: coarse) and (min-device-width: 601px) {
         height: 15px;
         width: 90px;
         text-align: center;
-        top: 302px;
+        top: 307px;
         right: -64px;
         background-color: #313248;
         padding: 5px;
@@ -262,7 +262,7 @@ screen and (pointer: coarse) and (min-device-width: 601px) {
         height: 15px;
         width: 90px;
         text-align: center;
-        top: 411px;
+        top: 416px;
         right: -64px;
         background-color: #313248;
         padding: 5px;
